# rust-discord-bot

./: Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
src/: main.rs
