[package]
name = "rust-discord-bot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.9.0-rc.1", default_features = false, features = ["client", "gateway", "model", "rustls_backend"] }
tokio = { version = "0.2", features = ["macros"] }
